# Common-Snippets

CMakeLists/: CMakeLists.txt
LogManager/: logmanager.cpp  logmanager.hpp
